[gd_scene load_steps=7 format=3 uid="uid://b8rtyjkttskm8"]

[ext_resource type="Script" uid="uid://cqawuafqqx6ve" path="res://Features/Achievements/Dialogs/achievement_dialog.gd" id="1_hsnt6"]
[ext_resource type="Script" uid="uid://ckhevounoe7f4" path="res://Scenes/fadeable_panel_container.gd" id="2_7isj7"]
[ext_resource type="PackedScene" uid="uid://csgvcitxpt8iw" path="res://FiiishUI/shop_frame_texture_rect.tscn" id="3_vsi8y"]
[ext_resource type="PackedScene" uid="uid://c5q30klywas4u" path="res://Features/Achievements/Dialogs/achievement_view.tscn" id="4_7isj7"]
[ext_resource type="PackedScene" uid="uid://bxbxcigpne8qa" path="res://FiiishUI/shop_frame_title_container.tscn" id="4_jp1h4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1w6v2"]

[node name="AchievementDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hsnt6")

[node name="FadeablePanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1w6v2")
script = ExtResource("2_7isj7")
metadata/_custom_type_script = "uid://ckhevounoe7f4"

[node name="ColorRect" type="ColorRect" parent="FadeablePanelContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.0902, 0.661877, 0.82, 0.25098)

[node name="ShopFrameTextureRect" parent="FadeablePanelContainer" instance=ExtResource("3_vsi8y")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="FadeablePanelContainer/ShopFrameTextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShopFrameTitleContainer" parent="FadeablePanelContainer/ShopFrameTextureRect/VBoxContainer" instance=ExtResource("4_jp1h4")]
layout_mode = 2
title = "Achievements"

[node name="CenterMarginContainer" type="MarginContainer" parent="FadeablePanelContainer/ShopFrameTextureRect/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 99
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 97
theme_override_constants/margin_bottom = 122

[node name="ColorRect" type="ColorRect" parent="FadeablePanelContainer/ShopFrameTextureRect/VBoxContainer/CenterMarginContainer"]
visible = false
layout_mode = 2
color = Color(0.5096, 0.5096, 0.98, 0.439216)

[node name="AchievementView" parent="FadeablePanelContainer/ShopFrameTextureRect/VBoxContainer/CenterMarginContainer" instance=ExtResource("4_7isj7")]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 780)
layout_mode = 2

[connection signal="on_faded_in" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_faded_in"]
[connection signal="on_faded_out" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_faded_out"]
[connection signal="on_fading_in" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_fading_in"]
[connection signal="on_fading_out" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_fading_out"]
[connection signal="close_button_pressed" from="FadeablePanelContainer/ShopFrameTextureRect/VBoxContainer/ShopFrameTitleContainer" to="." method="_on_close_button_pressed"]
